@@ -10,6 +10,7 @@ Change Log:
 - Added: Option to show BP XProfile fields in M2 account page
 - Added: ms_get_blog_list_args filter added to show non-public blogs in protectin rules page in network admin
 - Added: Define 'MS_CPT_ENABLE_ACCESS_BOX' to enable protection meta box in custom post type
+- Added: Filter 'ms_helper_listtable_billing_default_column' added for default column in billing table
 - Fixed: Test Memberships was not working (simulation mode)
 - Fixed: Protected posts appears in archive page
 - Fixed: Conflict with WPEngine Deployment
